Added About Us section

--- a/index.html
+++ b/index.html
@@ -74,128 +74,148 @@
             </div>
         </div>
     </section>
-    
+
     <!-- Callout-->
 
 
     <!-- About us -->
-    <section id="about-us">
-        <div></div>
-    </section>
+    <div class="container aboutus-container">
+        <section id="aboutus" class="container">
+            <div class="container aboutus-container text-center">
+                <h2>About Us</h2>
+                <p>
+                    ze Gym is an ultra-modern fitness center with excellent amenities and training
+                    equipment. We offer a wide range of classes and exercising programs, tailored to improve stamina and
+                    fitness goals of each gym member.</p>
+
+                <p> We aim to create a system in which everyone is respected and to provide a unique and enjoyable
+                    environment
+                    in which everyone feels comfortable. ze Gym strives to enable everyone to be the best version of
+                    themselves. From the staff to the clients involved in the gym it is all about working for the
+                    greater
+                    good. Members at ze Gym can each select a trainer, training program and a membership
+                    option by choice and personal preferences.</p>
+
+                <p>We hope to see you soon!</p>
+            </div>
+        </section>
+    </div>
 
     <!-- Testimonials -->
     <!-- Coding is based on https://getbootstrap.com/docs/4.6/components/carousel/ but customized into not being a carousel - see testing.md -->
     <!-- Testimonials are based on https://eatsleepwander.com/gym-review-example/ -->
-    <section id="testimonials" class="text-center">
-        <h3 class="font-weight-bold">Testimonials</h3>
-        <div class="row text-center">
-            <div class="col-md-4">
-                <div class="testimonial">
-                    <div class="mx-auto">
-                        <img src="assets/images/testimonial-images/review1.png" class="rounded-circle img-fluid"
-                            alt="review-one">
+    <div class="container testemonials-container">
+        <section id="testimonials" class="text-center">
+            <h3 class="font-weight-bold">Testimonials</h3>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <div class="testimonial">
+                        <div class="mx-auto">
+                            <img src="assets/images/testimonial-images/review1.png" class="rounded-circle img-fluid"
+                                alt="review-one">
+                        </div>
+                        <h5 class="font-weight-bold dark-grey-text mt-4">Ava Adley</h5>
+                        <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i></p>
+                        <hr class="hr-testimonial">
+                        <p class="">
+                            ze Gym so far has been awesome. They have exceptional trainers who are very kind too, the
+                            overall vibe is great and so far
+                            I have
+                            only had good experiences. I would definitely recommend them to anyone I know.</p>
                     </div>
-                    <h5 class="font-weight-bold dark-grey-text mt-4">Ava Adley</h5>
-                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                            class="fas fa-star"></i></p>
-                    <hr class="hr-testimonial">
-                    <p class="">
-                        ze Gym so far has been awesome. They have exceptional trainers who are very kind too, the
-                        overall vibe is great and so far
-                        I have
-                        only had good experiences. I would definitely recommend them to anyone I know.</p>
+                </div>
+                <div class="col-md-4">
+                    <div class="testimonial">
+                        <div class="mx-auto">
+                            <img src="assets/images/testimonial-images/review2.png" class="rounded-circle img-fluid"
+                                alt="review-two">
+                        </div>
+                        <h5 class="font-weight-bold dark-grey-text mt-4">Bernardo Bason</h5>
+                        <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
+                        <hr class="hr-testimonial">
+                        <p class="">
+                            I love this place. I highly recommend ze Gym to anyone looking to get in better shape. The
+                            trainers are really awesome and helpful, plus they make you feel really comfortable. The 45
+                            min training goes super fast and you'll really enjoy doing it. Everyday is different, so it
+                            never becomes boring.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 d-none d-sm-block">
+                    <div class="testimonial">
+                        <div class="mx-auto">
+                            <img src="assets/images/testimonial-images/review3.png" class="rounded-circle img-fluid"
+                                alt="review-three">
+                        </div>
+                        <h5 class="font-weight-bold dark-grey-text mt-4">Christina Cabral</h5>
+                        <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
+                        <hr class="hr-testimonial">
+                        <p class="">
+                            Easily the best gym in the city, reasonably priced and a great workout atmosphere – nice but
+                            not fancy, lots of people serious about fitness. Ive gotten some of my best training advice
+                            from staff there.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 d-none d-md-block">
+                    <div class="testimonial">
+                        <div class="mx-auto">
+                            <img src="assets/images/testimonial-images/review4.png" class="rounded-circle img-fluid"
+                                alt="review-four">
+                        </div>
+                        <h5 class="font-weight-bold dark-grey-text mt-4">Dominic Daniau</h5>
+                        <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i></p>
+                        <hr class="hr-testimonial">
+                        <p class="">
+                            Good mix of available classes and traditional gym equipment to train at your own
+                            convenience. Lots of space for Olympic
+                            lifting too. Unless you’re here in the early morning or the evening, there are never too
+                            many people which is nice.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 d-none d-md-block">
+                    <div class="testimonial">
+                        <div class="mx-auto">
+                            <img src="assets/images/testimonial-images/review5.png" class="rounded-circle img-fluid"
+                                alt="review-five">
+                        </div>
+                        <h5 class="font-weight-bold dark-grey-text mt-4">Eeshani Elayavalli</h5>
+                        <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i><i class="fas fa-star"></i></p>
+                        <hr class="hr-testimonial">
+                        <p class="">
+                            LOVE ze Gym! The trainers are always so upbeat, motivating, knowledgeable and encouraging.
+                            The
+                            community they have built here is incredible, and it is such a joy working out
+                            here. Definitely recommend and encourage everyone to try it out. I guarantee you won’t be
+                            disappointed.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 d-none d-md-block">
+                    <div class="testimonial">
+                        <div class="mx-auto">
+                            <img src="assets/images/testimonial-images/review6.png" class="rounded-circle img-fluid"
+                                alt="review-six">
+                        </div>
+                        <h5 class="font-weight-bold dark-grey-text mt-4">Friedrich Fahlmer</h5>
+                        <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
+                        <hr class="hr-testimonial">
+                        <p class="">
+                            I absolutely love this place! The staff is amazing and offer tons of support and
+                            encouragement on
+                            your fitness journey. The workouts are tough but rewarding and produce amazing results
+                            quickly if you are ready to commit to it! I’ve been going to ze Gym for about 3 months now
+                            and I have achieved better
+                            results in that time than I have in years at other gyms.</p>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="testimonial">
-                    <div class="mx-auto">
-                        <img src="assets/images/testimonial-images/review2.png" class="rounded-circle img-fluid"
-                            alt="review-two">
-                    </div>
-                    <h5 class="font-weight-bold dark-grey-text mt-4">Bernardo Bason</h5>
-                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                            class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
-                    <hr class="hr-testimonial">
-                    <p class="">
-                        I love this place. I highly recommend ze Gym to anyone looking to get in better shape. The
-                        trainers are really awesome and helpful, plus they make you feel really comfortable. The 45
-                        min training goes super fast and you'll really enjoy doing it. Everyday is different, so it
-                        never becomes boring.</p>
-                </div>
-            </div>
-            <div class="col-md-4 d-none d-sm-block">
-                <div class="testimonial">
-                    <div class="mx-auto">
-                        <img src="assets/images/testimonial-images/review3.png" class="rounded-circle img-fluid"
-                            alt="review-three">
-                    </div>
-                    <h5 class="font-weight-bold dark-grey-text mt-4">Christina Cabral</h5>
-                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                            class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
-                    <hr class="hr-testimonial">
-                    <p class="">
-                        Easily the best gym in the city, reasonably priced and a great workout atmosphere – nice but
-                        not fancy, lots of people serious about fitness. Ive gotten some of my best training advice
-                        from staff there.</p>
-                </div>
-            </div>
-            <div class="col-md-4 d-none d-md-block">
-                <div class="testimonial">
-                    <div class="mx-auto">
-                        <img src="assets/images/testimonial-images/review4.png" class="rounded-circle img-fluid"
-                            alt="review-four">
-                    </div>
-                    <h5 class="font-weight-bold dark-grey-text mt-4">Dominic Daniau</h5>
-                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                            class="fas fa-star"></i></p>
-                    <hr class="hr-testimonial">
-                    <p class="">
-                        Good mix of available classes and traditional gym equipment to train at your own
-                        convenience. Lots of space for Olympic
-                        lifting too. Unless you’re here in the early morning or the evening, there are never too
-                        many people which is nice.</p>
-                </div>
-            </div>
-            <div class="col-md-4 d-none d-md-block">
-                <div class="testimonial">
-                    <div class="mx-auto">
-                        <img src="assets/images/testimonial-images/review5.png" class="rounded-circle img-fluid"
-                            alt="review-five">
-                    </div>
-                    <h5 class="font-weight-bold dark-grey-text mt-4">Eeshani Elayavalli</h5>
-                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                            class="fas fa-star"></i><i class="fas fa-star"></i></p>
-                    <hr class="hr-testimonial">
-                    <p class="">
-                        LOVE ze Gym! The trainers are always so upbeat, motivating, knowledgeable and encouraging.
-                        The
-                        community they have built here is incredible, and it is such a joy working out
-                        here. Definitely recommend and encourage everyone to try it out. I guarantee you won’t be
-                        disappointed.
-                    </p>
-                </div>
-            </div>
-            <div class="col-md-4 d-none d-md-block">
-                <div class="testimonial">
-                    <div class="mx-auto">
-                        <img src="assets/images/testimonial-images/review6.png" class="rounded-circle img-fluid"
-                            alt="review-six">
-                    </div>
-                    <h5 class="font-weight-bold dark-grey-text mt-4">Friedrich Fahlmer</h5>
-                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                            class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
-                    <hr class="hr-testimonial">
-                    <p class="">
-                        I absolutely love this place! The staff is amazing and offer tons of support and
-                        encouragement on
-                        your fitness journey. The workouts are tough but rewarding and produce amazing results
-                        quickly if you are ready to commit to it! I’ve been going to ze Gym for about 3 months now
-                        and I have achieved better
-                        results in that time than I have in years at other gyms.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+        </section>
+    </div>
 
 
     <!-- Classes-->
