--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
             <div class="hero-text">
                 <h2>Dream Big!</h2>
             </div>
+            <div class="container callout-container">
+                <!-- Callout -->
+                <div class="row">
+                    <div class="col-12">
+                        <section class="callout jumbotron opaque">
+                            <h1 class="jumbotron-header">Join us!</h1>
+                            <p class="lead">Sign up now to get one month free!</p>
+                            <p><button class="btn-slide-red" data-toggle="modal" data-target="#signUpModal">Sign
+                                    Up!</button></p>
+                        </section>
+                    </div>
+                </div>
+            </div>
             <!-- Sticky social bar is based on https://www.w3schools.com/howto/howto_css_sticky_social_bar.asp -->
             <div class="icon-bar">
                 <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="facebook"><i
@@ -83,8 +96,7 @@
         <section id="aboutus" class="container">
             <div class="container aboutus-container text-center">
                 <h2>About Us</h2>
-                <p>
-                    ze Gym is an ultra-modern fitness center with excellent amenities and training
+                <p> ze Gym is an ultra-modern fitness center with excellent amenities and training
                     equipment. We offer a wide range of classes and exercising programs, tailored to improve stamina and
                     fitness goals of each gym member.</p>
 
@@ -96,7 +108,7 @@
                     good. Members at ze Gym can each select a trainer, training program and a membership
                     option by choice and personal preferences.</p>
 
-                <p>We hope to see you soon!</p>
+                <p> We hope to see you soon!</p>
             </div>
         </section>
     </div>
@@ -353,24 +365,20 @@
                                 with
                                 anyone else.</small>
                         </div>
-
                         <div class="form-group">
                             <label for="password">Password</label>
                             <input type="password" class="form-control" id="password" aria-describedby="Password"
                                 placeholder="Password" required>
                         </div>
-
                         <div class="form-group">
                             <label for="repeat-password">Repeat Password</label>
                             <input type="password" class="form-control" id="repeat-password"
                                 placeholder="Repeat Password" required>
                         </div>
-
                         <div class="form-group form-check">
                             <input type="checkbox" checked="checked" class="form-check-input" id="modal-checkbox">
                             <label class="form-check-label" for="modal-checkbox">Remember me</label>
                         </div>
-
                         <button type="submit" class="btn-slide-red">Submit</button>
                     </form>
                 </div>
