Fixed callout placement

--- a/index.html
+++ b/index.html
@@ -63,29 +63,31 @@
             <div class="hero-text">
                 <h2>Dream Big!</h2>
             </div>
-            <div class="container callout-container">
-                <!-- Callout -->
-                <div class="row">
-                    <div class="col-12">
-                        <section class="callout jumbotron opaque">
-                            <h1 class="jumbotron-header">Join us!</h1>
-                            <p class="lead">Sign up now to get one month free!</p>
-                            <p><button class="btn-slide-red" data-toggle="modal" data-target="#signUpModal">Sign
-                                    Up!</button></p>
-                        </section>
+            <div class="container container-center">
+                <div class="container callout-container">
+                    <!-- Callout -->
+                    <div class="row callout-position">
+                        <div class="col-12">
+                            <section class="callout jumbotron opaque">
+                                <h1 class="jumbotron-header">Join us!</h1>
+                                <p class="lead">Sign up now to get one month free!</p>
+                                <p><button class="btn-slide-red" data-toggle="modal" data-target="#signUpModal">Sign
+                                        Up!</button></p>
+                            </section>
+                        </div>
                     </div>
                 </div>
             </div>
-            <!-- Sticky social bar is based on https://www.w3schools.com/howto/howto_css_sticky_social_bar.asp -->
-            <div class="icon-bar">
-                <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="facebook"><i
-                        class="fab fa-facebook-square"></i></a>
-                <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" class="instagram"><i
-                        class="fab fa-instagram-square"></i></a>
-                <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" class="youtube"><i
-                        class="fab fa-youtube-square"></i></a>
+                <!-- Sticky social bar is based on https://www.w3schools.com/howto/howto_css_sticky_social_bar.asp -->
+                <div class="icon-bar">
+                    <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="facebook"><i
+                            class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" class="instagram"><i
+                            class="fab fa-instagram-square"></i></a>
+                    <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" class="youtube"><i
+                            class="fab fa-youtube-square"></i></a>
+                </div>
             </div>
-        </div>
     </section>
 
     <!-- Callout-->
