Styled and bordered callout

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
             <div class="hero-text">
                 <h2>Dream Big!</h2>
             </div>
+            <!-- Callout -->
             <div class="container container-center">
-                <div class="container callout-container">
-                    <!-- Callout -->
+                <div class="container callout-container text-center">
                     <div class="row callout-position">
                         <div class="col-12">
-                            <section class="callout jumbotron opaque">
+                            <section class="callout jumbotron opaque border border-white">
                                 <h1 class="jumbotron-header">Join us!</h1>
                                 <p class="lead">Sign up now to get one month free!</p>
                                 <p><button class="btn-slide-red" data-toggle="modal" data-target="#signUpModal">Sign
@@ -89,9 +89,6 @@
                 </div>
             </div>
     </section>
-
-    <!-- Callout-->
-
 
     <!-- About us -->
     <div class="container aboutus-container">
